Fix crash on playing an album in shuffle mode while a track is playing

BUG: 465153